[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres_helpers"
version = "0.1.1"
description = "PostgreSQL Connection Helper in Async, Sync and Pool modes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nono London"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Intended Audience :: Developers",
]
keywords = ["postgresql", "postgres", "asyncpg", "psycopg2", "database", "async"]

dependencies = [
    "asyncpg>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/nono-london/postgres_helpers"
Repository = "https://github.com/nono-london/postgres_helpers"
Issues = "https://github.com/nono-london/postgres_helpers/issues"

[tool.setuptools.packages.find]
include = ["postgres_helpers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true